# django-celery

./: .gitignore  README.md  pyproject.toml  requirements.txt
app2/: email.py  forms.py  tasks.py  views.py
app2/templates/: base.html  email_message.txt  review.html
app3/: tasks.py
app3/migrations/: 0001_initial.py
core/: __init__.py  celery.py  settings.py  urls.py
